<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Silent Timer</string>
    <string name="status_normal">Normal</string>
    <string name="status_silent">Silent</string>
    <string name="status_vibrate">Vibrate</string>
    <string name="status_subtext">Tap a preset or set a custom timer</string>
    <string name="presets">Quick Presets</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="custom_timer">Custom Timer</string>
    <string name="active_timer">Timer Active</string>
    <string name="select_time">Pick</string>
    <string name="set_silent">Silent</string>
    <string name="set_vibrate">Vibrate</string>
    <string name="cancel">Cancel Timer</string>
    <string name="cancelled">Timer cancelled</string>
    <string name="select_time_first">Please select a duration first</string>
    <string name="perm_toast">Please grant Do Not Disturb access to use this app</string>
    <string name="timer_started">Timer started</string>
    <string name="until">Until</string>
    <string name="until_format" formatted="false">Until %02d:%02d</string>
    <string name="until_duration">(%s)</string>

    <string name="tile_silent">Silent</string>
    <string name="tile_vibrate">Vibrate</string>
    <string name="tile_normal">Sound</string>

    <string name="notif_channel">Silent Timer</string>
    <string name="notif_channel_desc">Shows remaining silent/vibrate time</string>
    <string name="notif_silent">Silent mode active</string>
    <string name="notif_vibrate">Vibrate mode active</string>
    <string name="notif_remaining">%s remaining (until %s)</string>
    <string name="notif_extend">+10 min</string>
    <string name="notif_stop">Stop</string>
    <string name="notif_until">until %s</string>

    <string name="settings_view_style">View Style</string>
    <string name="settings_grid">Grid</string>
    <string name="settings_list">List</string>
    <string name="settings_grid_columns">Grid Columns</string>
</resources>
